--- a/.gitattributes
+++ b/.gitattributes
@@ -103,6 +103,7 @@ ecrire/img_pack/cal-semaine.gif -text
 ecrire/img_pack/calendrier-24.gif -text
 ecrire/img_pack/choix-layout.gif -text
 ecrire/img_pack/choix-layout_rtl.gif -text
+ecrire/img_pack/choix-layout_rtl_he.gif -text
 ecrire/img_pack/cookie-24.gif -text
 ecrire/img_pack/creer.gif -text
 ecrire/img_pack/croix-rouge.gif -text
