Choix de la méthode de création de vignette : * choisir gd1 ou gd2 * essayer imagemagick en mode ligne de commande * essayer imagick (module imagemagick pour php4)

--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,7 @@ IMG/icones_barre/quote.png -text
 IMG/test.gif -text
 IMG/test.jpg -text
 IMG/test.png -text
+IMG/test_image.jpg -text
 NAVPICS/petit-logo-spip.gif -text
 NAVPICS/point.gif -text
 NAVPICS/rien.gif -text
