--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,7 @@ ecrire/img_pack/cadenas-24.gif -text
 ecrire/img_pack/cal-jour.gif -text
 ecrire/img_pack/cal-messagerie.gif -text
 ecrire/img_pack/cal-mois.gif -text
+ecrire/img_pack/cal-rv.gif -text
 ecrire/img_pack/cal-semaine.gif -text
 ecrire/img_pack/cal-suivi.gif -text
 ecrire/img_pack/calendrier-24.gif -text
