--- a/.gitattributes
+++ b/.gitattributes
@@ -97,6 +97,7 @@ ecrire/img_pack/cal-mois.gif -text
 ecrire/img_pack/cal-rv.gif -text
 ecrire/img_pack/cal-semaine.gif -text
 ecrire/img_pack/cal-suivi.gif -text
+ecrire/img_pack/cal-today.gif -text
 ecrire/img_pack/calendrier-24.gif -text
 ecrire/img_pack/choix-layout.png -text
 ecrire/img_pack/choix-layout_rtl.png -text
