Presentation des menus deroulants "Dans la rubrique:" Logo "Racine du site" nettoye Nouveau petit logo (12px) Racine du site pour les menus deroulants

--- a/.gitattributes
+++ b/.gitattributes
@@ -173,6 +173,7 @@ ecrire/img_pack/puce-verte-anim.gif -text
 ecrire/img_pack/puce-verte-breve.gif -text
 ecrire/img_pack/puce-verte.gif -text
 ecrire/img_pack/racine-24.gif -text
+ecrire/img_pack/racine-site-12.gif -text
 ecrire/img_pack/racine-site-24.gif -text
 ecrire/img_pack/rayures-danger.gif -text
 ecrire/img_pack/rayures-danger.png -text
