à la réflexion mieux vaut ranger ce fichier dans IMG/

--- a/.gitattributes
+++ b/.gitattributes
@@ -63,6 +63,7 @@ IMG/icones_barre/notes.png -text
 IMG/icones_barre/oelig-maj.png -text
 IMG/icones_barre/oelig.png -text
 IMG/icones_barre/quote.png -text
+IMG/logo_spip.jpg -text
 IMG/test.gif -text
 IMG/test.jpg -text
 IMG/test.png -text
@@ -228,4 +229,3 @@ ecrire/puce.gif -text
 ecrire/puce_rtl.gif -text
 /puce.gif -text
 /puce_rtl.gif -text
-/spip_logo.jpg -text
