backport labo + correction petits bugs sur id_version==0

--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,7 @@ ecrire/img_pack/forum-droite_rtl.gif -text
 ecrire/img_pack/forum-interne-24.gif -text
 ecrire/img_pack/forum-vert.gif -text
 ecrire/img_pack/groupe-mot-24.gif -text
+ecrire/img_pack/historique-24.gif -text
 ecrire/img_pack/image-24.gif -text
 ecrire/img_pack/interface-display.gif -text
 ecrire/img_pack/jauge-fond.gif -text
