Cosmetique * liens spip_out mis en evidence avec petite icone * plus de visibilite pour interface simplifiee

--- a/.gitattributes
+++ b/.gitattributes
@@ -203,6 +203,7 @@ ecrire/img_pack/secteur-24.gif -text
 ecrire/img_pack/set-ecran-etroit.gif -text
 ecrire/img_pack/set-ecran.gif -text
 ecrire/img_pack/site-24.gif -text
+ecrire/img_pack/spip_out.gif -text
 ecrire/img_pack/statistiques-24.gif -text
 ecrire/img_pack/statistiques-48.png -text
 ecrire/img_pack/suivi-forum-24.gif -text
