--- a/.gitattributes
+++ b/.gitattributes
@@ -154,6 +154,7 @@ ecrire/img_pack/messagerie-24.gif -text
 ecrire/img_pack/messagerie-48.png -text
 ecrire/img_pack/mot-cle-24.gif -text
 ecrire/img_pack/naviguer-site.gif -text
+ecrire/img_pack/ortho-24.gif -text
 ecrire/img_pack/pense-bete.gif -text
 ecrire/img_pack/petite-cle.gif -text
 ecrire/img_pack/petition-24.gif -text
