Ajout d'un bouton "Plus" pour affichage de listes plus completes

--- a/.gitattributes
+++ b/.gitattributes
@@ -159,6 +159,7 @@ ecrire/img_pack/ortho-24.gif -text
 ecrire/img_pack/pense-bete.gif -text
 ecrire/img_pack/petite-cle.gif -text
 ecrire/img_pack/petition-24.gif -text
+ecrire/img_pack/plus.gif -text
 ecrire/img_pack/poubelle.gif -text
 ecrire/img_pack/puce-blanche-anim.gif -text
 ecrire/img_pack/puce-blanche-breve.gif -text
