--- a/.gitattributes
+++ b/.gitattributes
@@ -125,6 +125,7 @@ ecrire/img_pack/forum-admin-24.gif -text
 ecrire/img_pack/forum-droite.gif -text
 ecrire/img_pack/forum-droite_rtl.gif -text
 ecrire/img_pack/forum-interne-24.gif -text
+ecrire/img_pack/forum-public-24.gif -text
 ecrire/img_pack/forum-vert.gif -text
 ecrire/img_pack/groupe-mot-24.gif -text
 ecrire/img_pack/heures-am.png -text
