Nouvelles icones d'interface

--- a/.gitattributes
+++ b/.gitattributes
@@ -133,7 +133,8 @@ ecrire/img_pack/heures-pm.png -text
 ecrire/img_pack/heures-tout.png -text
 ecrire/img_pack/historique-24.gif -text
 ecrire/img_pack/image-24.gif -text
-ecrire/img_pack/interface-display.gif -text
+ecrire/img_pack/interface-display-comp.png -text
+ecrire/img_pack/interface-display.png -text
 ecrire/img_pack/jauge-fond.gif -text
 ecrire/img_pack/jauge-rouge.gif -text
 ecrire/img_pack/jauge-vert.gif -text
@@ -214,6 +215,7 @@ ecrire/img_pack/spip_out.gif -text
 ecrire/img_pack/statistiques-24.gif -text
 ecrire/img_pack/statistiques-48.png -text
 ecrire/img_pack/suivi-forum-24.gif -text
+ecrire/img_pack/suivi-petition-24.gif -text
 ecrire/img_pack/supprimer.gif -text
 ecrire/img_pack/synchro-24.gif -text
 ecrire/img_pack/tirets-separation.gif -text
