Icones de choix interface simple/complete

--- a/.gitattributes
+++ b/.gitattributes
@@ -133,6 +133,8 @@ ecrire/img_pack/heures-pm.png -text
 ecrire/img_pack/heures-tout.png -text
 ecrire/img_pack/historique-24.gif -text
 ecrire/img_pack/image-24.gif -text
+ecrire/img_pack/interface-display-comp.png -text
+ecrire/img_pack/interface-display.png -text
 ecrire/img_pack/jauge-fond.gif -text
 ecrire/img_pack/jauge-rouge.gif -text
 ecrire/img_pack/jauge-vert.gif -text
