portfolio suite et fin

--- a/.gitattributes
+++ b/.gitattributes
@@ -232,6 +232,7 @@ ecrire/img_pack/triangle-droite.gif -text
 ecrire/img_pack/triangle-droite_rtl.gif -text
 ecrire/img_pack/triangle.gif -text
 ecrire/img_pack/triangle_rtl.gif -text
+ecrire/img_pack/vignette-24.png -text
 ecrire/img_pack/visit-12.gif -text
 ecrire/img_pack/visiter-48.png -text
 ecrire/img_pack/visiter-48_rtl.png -text
