un peu de cvsignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 CACHE/?
 CACHE/lang_*
 CACHE/skel_*
+IMG/artoff*
+IMG/arton*
+IMG/autoff*
+IMG/auton*
+IMG/breveoff*
+IMG/breveon*
+IMG/cache-*
+IMG/motoff*
+IMG/moton*
+IMG/ruboff*
+IMG/rubon*
+IMG/siteoff*
+IMG/siteon*
+IMG/test_*
 ecrire/data/.htaccess
 ecrire/data/.htpasswd
 ecrire/data/.htpasswd-admin
