icone par defaut pour le type "css" (aurelien levy)

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ IMG/icones/asf-dist.png -text
 IMG/icones/avi-dist.png -text
 IMG/icones/bmp-dist.png -text
 IMG/icones/bz2-dist.png -text
+IMG/icones/css-dist.png -text
 IMG/icones/deb-dist.png -text
 IMG/icones/defaut-dist.png -text
 IMG/icones/doc-dist.png -text
