prise en charge de l'icone PGN

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ IMG/icones/mp3-dist.png -text
 IMG/icones/mpg-dist.png -text
 IMG/icones/ogg-dist.png -text
 IMG/icones/pdf-dist.png -text
+IMG/icones/pgn.gif svneol=native#unset
 IMG/icones/png-dist.png -text
 IMG/icones/ppt-dist.png -text
 IMG/icones/ps-dist.png -text
