--- a/.gitattributes
+++ b/.gitattributes
@@ -115,6 +115,7 @@ ecrire/img_pack/documents-48.png -text
 ecrire/img_pack/documents-48_rtl.png -text
 ecrire/img_pack/edit.gif -text
 ecrire/img_pack/effacer-cache-24.gif -text
+ecrire/img_pack/favicon.ico -text
 ecrire/img_pack/fiche-perso-24.gif -text
 ecrire/img_pack/fiche-perso.png -text
 ecrire/img_pack/fleche-left.png -text
