podcasting et documents distants, commit initial

--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,7 @@ ecrire/img_pack/annonce.gif -text
 ecrire/img_pack/article-24.gif -text
 ecrire/img_pack/asuivre-24.gif -text
 ecrire/img_pack/asuivre-48.png -text
+ecrire/img_pack/attachment.gif -text
 ecrire/img_pack/auteur-24.gif -text
 ecrire/img_pack/barre-blanc.gif -text
 ecrire/img_pack/barre-d.gif -text
