--- a/.gitattributes
+++ b/.gitattributes
@@ -243,6 +243,9 @@ ecrire/img_pack/visiter-48_rtl.png -text
 ecrire/img_pack/warning-24.gif -text
 ecrire/img_pack/warning.gif -text
 ecrire/img_pack/xml.gif -text
+ecrire/polices/dustismo-license.txt -text svneol=unset#application/octet-stream
+ecrire/polices/dustismo.ttf -text
+ecrire/polices/dustismo_bold.ttf -text
 ecrire/puce.gif -text
 ecrire/puce_rtl.gif -text
 /puce.gif -text
