Win_png a la racine

--- a/.gitattributes
+++ b/.gitattributes
@@ -248,6 +248,7 @@ ecrire/polices/dustismo.ttf -text
 ecrire/polices/dustismo_bold.ttf -text
 ecrire/puce.gif -text
 ecrire/puce_rtl.gif -text
+ecrire/rien.gif -text
 /puce.gif -text
 /puce_rtl.gif -text
 /rien.gif -text
