bittorrent (+ icone [pas terrible])

--- a/.gitattributes
+++ b/.gitattributes
@@ -41,6 +41,7 @@ IMG/icones/sxw-dist.png -text
 IMG/icones/tex-dist.png -text
 IMG/icones/tgz-dist.png -text
 IMG/icones/tif-dist.png -text
+IMG/icones/torrent-dist.png -text
 IMG/icones/txt-dist.png -text
 IMG/icones/wav-dist.png -text
 IMG/icones/xcf-dist.png -text
