Nettoyer table spip_ajax_fonc (toutes les 2 heures?)

--- a/.gitattributes
+++ b/.gitattributes
@@ -246,6 +246,7 @@ ecrire/img_pack/visiter-48_rtl.png -text
 ecrire/img_pack/warning-24.gif -text
 ecrire/img_pack/warning.gif -text
 ecrire/img_pack/xml.gif -text
+ecrire/inc_ajax.php3 -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_mini_nav.php -text
 ecrire/polices/dustismo-license.txt -text svneol=unset#application/octet-stream
