--- a/.gitattributes
+++ b/.gitattributes
@@ -249,6 +249,9 @@ ecrire/img_pack/xml.gif -text
 ecrire/inc_ajax.php3 -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_mini_nav.php -text
+ecrire/lang/ecrire_ru.php3 -text
+ecrire/lang/public_ru.php3 -text
+ecrire/lang/spip_ru.php3 -text
 ecrire/polices/dustismo-license.txt -text svneol=unset#application/octet-stream
 ecrire/polices/dustismo.ttf -text
 ecrire/polices/dustismo_bold.ttf -text
