partage de code. incidemment, optimisation de iframe qui chargeait toute l'interface graphique de l'espace privee pour faire une simple requete SQL

--- a/.gitattributes
+++ b/.gitattributes
@@ -247,8 +247,11 @@ ecrire/img_pack/warning-24.gif -text
 ecrire/img_pack/warning.gif -text
 ecrire/img_pack/xml.gif -text
 ecrire/inc_ajax.php3 -text
+ecrire/inc_articles.php -text
 ecrire/inc_barre.php3 -text
+ecrire/inc_breves.php -text
 ecrire/inc_mini_nav.php -text
+ecrire/inc_naviguer.php -text
 ecrire/lang/ecrire_ru.php3 -text
 ecrire/lang/public_ru.php3 -text
 ecrire/lang/spip_ru.php3 -text
