tentative d'allegement du code (grosses modifs)

--- a/.gitattributes
+++ b/.gitattributes
@@ -72,6 +72,16 @@ IMG/test.jpg -text
 IMG/test.png -text
 IMG/test_image.jpg -text
 ecrire/ajax_page.php -text
+ecrire/charsets/cp1251.php -text
+ecrire/charsets/cp1256.php -text
+ecrire/charsets/html.php -text
+ecrire/charsets/iso-8859-1.php -text
+ecrire/charsets/iso-8859-15.php -text
+ecrire/charsets/iso-8859-6.php -text
+ecrire/charsets/iso-8859-9.php -text
+ecrire/charsets/mathml.php -text
+ecrire/charsets/translit.php -text
+ecrire/charsets/translitcomplexe.php -text
 ecrire/img_pack/admin-12.gif -text
 ecrire/img_pack/administration-24.gif -text
 ecrire/img_pack/administration-48.png -text
@@ -251,7 +261,11 @@ ecrire/inc_ajax.php3 -text
 ecrire/inc_articles.php -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_breves.php -text
+ecrire/inc_connect.php3 -text
 ecrire/inc_controle_forum.php -text
+ecrire/inc_cookie.php -text
+ecrire/inc_headers.php -text
+ecrire/inc_magicquotes.php -text
 ecrire/inc_mini_nav.php -text
 ecrire/inc_naviguer.php -text
 ecrire/lang/ecrire_ru.php3 -text
