fichier manquant : inc_lang_liste

--- a/.gitattributes
+++ b/.gitattributes
@@ -264,6 +264,7 @@ ecrire/inc_breves.php -text
 ecrire/inc_controle_forum.php -text
 ecrire/inc_cookie.php -text
 ecrire/inc_headers.php -text
+ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
 ecrire/inc_mini_nav.php -text
 ecrire/inc_naviguer.php -text
