--- a/.gitattributes
+++ b/.gitattributes
@@ -268,6 +268,7 @@ ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
 ecrire/inc_mini_nav.php -text
 ecrire/inc_naviguer.php -text
+ecrire/inc_spip_image.php -text
 ecrire/lang/ecrire_ru.php3 -text
 ecrire/lang/public_ru.php3 -text
 ecrire/lang/spip_ru.php3 -text
