--- a/.gitattributes
+++ b/.gitattributes
@@ -286,6 +286,11 @@ ecrire/safehtml/classes/safehtml.php -text
 ecrire/safehtml/license.txt -text
 ecrire/safehtml/readme-SPIP.txt -text
 ecrire/safehtml/readme.txt -text
+plugins/ancres/version.php -text
+plugins/podcast_client/podcast_client.php -text
+plugins/podcast_client/version.php -text
+plugins/revision_nbsp/version.php -text
+plugins/smallcaps/version.php -text
 /puce.gif -text
 /puce_rtl.gif -text
 /rien.gif -text
