--- a/.gitattributes
+++ b/.gitattributes
@@ -263,6 +263,7 @@ ecrire/inc_articles_edit.php -text
 ecrire/inc_auteur_infos.php -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_breves.php -text
+ecrire/inc_config-fonctions.php -text
 ecrire/inc_controle_forum.php -text
 ecrire/inc_cookie.php -text
 ecrire/inc_headers.php -text
