--- a/.gitattributes
+++ b/.gitattributes
@@ -261,6 +261,7 @@ ecrire/inc_aide_index.php -text
 ecrire/inc_ajax.php3 -text
 ecrire/inc_articles.php -text
 ecrire/inc_articles_edit.php -text
+ecrire/inc_articles_page.php -text
 ecrire/inc_auteur_infos.php -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_breves.php -text
