--- a/.gitattributes
+++ b/.gitattributes
@@ -263,6 +263,7 @@ ecrire/inc_articles.php -text
 ecrire/inc_articles_edit.php -text
 ecrire/inc_articles_page.php -text
 ecrire/inc_auteur_infos.php -text
+ecrire/inc_auteurs_edit.php -text
 ecrire/inc_barre.php3 -text
 ecrire/inc_breves.php -text
 ecrire/inc_config-fonctions.php -text
