--- a/.gitattributes
+++ b/.gitattributes
@@ -269,6 +269,7 @@ ecrire/inc_breves.php -text
 ecrire/inc_config-fonctions.php -text
 ecrire/inc_controle_forum.php -text
 ecrire/inc_cookie.php -text
+ecrire/inc_forum_admin.php -text
 ecrire/inc_headers.php -text
 ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
