decoupage de inc_presentation en 2, afin que les petits scripts (spip_image, spip_rss, aide etc) n'ayant besoin que d'une presentation minimale  puissent ne lire que ce minimum

--- a/.gitattributes
+++ b/.gitattributes
@@ -274,6 +274,7 @@ ecrire/inc_headers.php -text
 ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
 ecrire/inc_mini_nav.php -text
+ecrire/inc_minipres.php -text
 ecrire/inc_naviguer.php -text
 ecrire/inc_spip_cal.php -text
 ecrire/inc_spip_image.php -text
