--- a/.gitattributes
+++ b/.gitattributes
@@ -273,6 +273,7 @@ ecrire/inc_forum_admin.php -text
 ecrire/inc_headers.php -text
 ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
+ecrire/inc_message.php -text
 ecrire/inc_mini_nav.php -text
 ecrire/inc_minipres.php -text
 ecrire/inc_naviguer.php -text
