--- a/.gitattributes
+++ b/.gitattributes
@@ -271,6 +271,7 @@ ecrire/inc_controle_forum.php -text
 ecrire/inc_cookie.php -text
 ecrire/inc_forum_admin.php -text
 ecrire/inc_headers.php -text
+ecrire/inc_js_menu_rubriques.php -text
 ecrire/inc_lang_liste.php -text
 ecrire/inc_magicquotes.php -text
 ecrire/inc_message.php -text
